--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -88,7 +88,7 @@
 
   figcaption {
     font-size: $font-size-xxs;
-    font-family: $roboto;
+    font-family: var(--headings--font-family);
     line-height: 1.4;
     margin-bottom: 0;
     color: $grey-60;
