--- a/assets/src/styles/blocks/Gallery/styles/GalleryCarousel.scss
+++ b/assets/src/styles/blocks/Gallery/styles/GalleryCarousel.scss
@@ -110,7 +110,7 @@
     p {
       color: $grey-60;
       font-size: $font-size-xxs;
-      font-family: $roboto;
+      font-family: var(--headings--font-family);
       line-height: 1.4;
       margin-bottom: 0;
       display: -webkit-box;
