--- a/templates/desktop-menu.twig
+++ b/templates/desktop-menu.twig
@@ -19,7 +19,7 @@
 						{{ item.title }}
 					</a>
 
-					{% if item.children is not empty and dropdown_menu %}
+					{% if item.children is not empty %}
 						{% include 'navigation-submenu.twig' with { menu: item } %}
 					{% endif %}
 				</li>
@@ -29,14 +29,14 @@
 				{% set donate_menu = donate_menu_items|first %}
 				<li class="nav-donate">
 					<a
-						class="btn btn-donate {{ donate_menu.children and dropdown_menu ? 'dropdown' : '' }}"
+						class="btn btn-donate {{ donate_menu.children ? 'dropdown' : '' }}"
 						href="{{ donate_menu.link }}"
 						data-ga-category="Menu Navigation"
 						data-ga-action="Donate"
 						data-ga-label="{{ page_category }}">
 						{{ donate_menu.title }}
 					</a>
-					{% if donate_menu.children is not empty and dropdown_menu %}
+					{% if donate_menu.children is not empty %}
 						{% include 'navigation-submenu.twig' with { menu: donate_menu } %}
 					{% endif %}
 				</li>
