Add rel="me" on footer social icon links
This is being used by some social media platforms to verify website url.

--- a/templates/footer_social_media.twig
+++ b/templates/footer_social_media.twig
@@ -24,7 +24,7 @@
           {% endif %}
         {% endfor %}
         <li>
-          <a href="{{ social.url }}"
+          <a href="{{ social.url }}" rel="me"
             data-ga-category="Footer Navigation"
             data-ga-action="Social Icons"
             data-ga-label="{{ social.title }}">
