--- a/templates/author.twig
+++ b/templates/author.twig
@@ -25,8 +25,8 @@
             {{ query_loop|raw }}
         {% else %}
             <div class="row">
-                <div class="col-lg-8 multiple-search-result">
-                    <ul class="list-unstyled">
+                <div class="is-layout-flow wp-block-query wp-block-query--list">
+                    <ul class="is-layout-flow wp-block-post-template">
                         {% for post in posts %}
                             {% include 'tease-author.twig' %}
                         {% endfor %}
