--- a/templates/tease-taxonomy-post.twig
+++ b/templates/tease-taxonomy-post.twig
@@ -1,69 +1,83 @@
-<li id="result-row-{{ post.ID }}" class="d-flex search-result-list-item">
-    {% include "blocks/image.twig" with {post:post, dummy_thumbnail:dummy_thumbnail} %}
+<li id="result-row-{{ post.ID }}" class="wp-block-post post-{{ post.ID }} post type-post status-publish format-standard hentry">
+    <article class="query-list-item">
+        <div class="query-list-item-image query-list-item-image-max-width">
+        <a href="{{ post.link() }}">
+            {{ fn('get_the_post_thumbnail', post.ID, null, {'sizes': '(min-width: 1600px) 389px, (min-width: 1200px) 335px, (min-width: 1000px) 281px, (min-width: 780px) 209px, (min-width: 580px) 516px, calc(100vw - 24px)', 'data-ga-category': data_ga_category ?? 'Articles List', 'data-ga-action': "Image", 'data-ga-label': "n/a", 'alt': fn('esc_attr', post.thumbnail_alt|default( post.post_title )|striptags ) })|raw }}
+        </a>
+        </div>
 
-    <div id="tease-{{ post.ID }}" class="search-result-item-body tease tease-{{ post.post_type }}">
-        <div class="search-result-tags top-page-tags">
-            {% if (post.page_types is not empty) %}
-                <a
-                    href="{{ fn('get_term_link', post.page_types.0.term_id) }}"
-                    class="search-result-item-head no-btn tag-item tag-item--main page-type"
-                    data-ga-category="Articles List"
-                    data-ga-action="Post Type Tag"
-                    data-ga-label="n/a">
-                        {{ post.get_page_types.0.name|e('wp_kses_post')|raw }}
-                </a>
-            {% endif %}
+        <div id="tease-{{ post.ID }}" class="query-list-item-body">
+            <div class="query-list-item-post-terms">
+                {% if (post.page_types is not empty) %}
+                <div class="wrapper-post-term">
+                    <div class="taxonomy-p4-page-type wp-block-post-terms">
+                    <a
+                        href="{{ fn('get_term_link', post.page_types.0.term_id) }}"
+                        data-ga-category="Articles List"
+                        data-ga-action="Post Type Tag"
+                        data-ga-label="n/a"
+                        rel="tag">
+                            {{ post.get_page_types.0.name|e('wp_kses_post')|raw }}
+                    </a>
+                    </div>
+                </div>
+                {% endif %}
 
-            {% if ( (post.page_types is not empty) and post.tags ) %}
-                <span class="tag-wrap-bullet" aria-hidden="true">&#8226;</span>
-            {% endif %}
-
-            {% if (post.tags) %}
-                <div class="tag-wrap tags">
+                {% if (post.tags) %}
+                <div class="wrapper-post-tag">
+                    <div class="taxonomy-post_tag wp-block-post-terms">
+                    {% apply spaceless %}
                     {% for tag in post.tags %}
                         <a
                             href="{{ tag.link }}"
-                            class="search-result-item-tag tag-item tag"
                             data-ga-category="Articles List"
                             data-ga-action="Navigation Tag"
-                            data-ga-label="n/a">
-                            <span aria-label="hashtag">#</span>{{ tag.name|e('wp_kses_post')|raw }}
-                        </a>
+                            data-ga-label="n/a"
+                            rel="tag">{{ tag.name|e('wp_kses_post')|raw }}
+                        </a><span class="wp-block-post-terms__separator">, </span>
                     {% endfor %}
+                    {% endapply %}
+                    </div>
                 </div>
-            {% endif %}
+                {% endif %}
+            </div>
+
+            <header>
+                <h4 class="query-list-item-headline wp-block-post-title">
+                <a
+                    href="{{ post.link() }}"
+                    data-ga-category="Articles List"
+                    data-ga-action="Title"
+                    data-ga-action-label="n/a">
+                        {{ post.title|e('wp_kses_post')|raw }}
+                </a>
+                </h4>
+            </header>
+
+            <div class="query-list-item-content wp-block-post-excerpt">
+                <p class="wp-block-post-excerpt__excerpt">{{ post.post_excerpt|excerpt( 30 )|e('wp_kses_post')|raw }}</p>
+            </div>
+
+            <div class="query-list-item-meta d-flex">
+                {% if ( post.author ) %}
+                    <span class="article-list-item-author">
+                        {% if not ( post.get_author_override ) %}
+                            <a href="{{ post.author.path }}">{{ post.author }}</a>
+                        {% else %}
+                            {{ post.author.name }}
+                        {% endif %}
+                    </span>
+                <span class="query-list-item-bullet" aria-hidden="true">•</span>
+                {% endif %}
+                <span class="wp-block-post-date">{{ post.post_date|date }}</span>
+                {% set reading_time = post.reading_time %}
+                {% if reading_time %}
+                    <span class="article-list-item-readtime">
+                        {{ __( '%d min read', 'planet4-master-theme' )|format(reading_time) }}
+                    </span>
+                {% endif %}
+            </div>
+
         </div>
-
-        <a
-            href="{{ post.link() }}"
-            class="search-result-item-headline"
-            data-ga-category="Articles List"
-            data-ga-action="Title"
-            data-ga-label="n/a">
-                {{ post.title|e('wp_kses_post')|raw }}
-        </a>
-
-        <p class="search-result-item-content">{{ post.post_excerpt|excerpt( 30 )|e('wp_kses_post')|raw }}</p>
-
-        <div class="search-result-item-info">
-            {% if ( post.author ) %}
-                <span class="search-result-item-author">
-                    {% if not ( post.get_author_override ) %}
-                        <a href="{{ post.author.path }}">{{ post.author }}</a>
-                    {% else %}
-                        {{ post.author.name }}
-                    {% endif %}
-                </span>
-            {% endif %}
-            <span class="search-result-item-date">{{ post.post_date|date }}</span>
-            {% set reading_time = post.reading_time %}
-            {% if reading_time %}
-                <span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
-                <span class="single-post-meta-readtime">
-                    {{ __( '%d min read', 'planet4-master-theme' )|format(reading_time) }}
-                </span>
-            {% endif %}
-        </div>
-
-    </div>
+    </article>
 </li>
