PLANET-7020 Add new site identity feature toggle
This toggle is in Appearance > Customize > Site Identity. We also added this value to planet4_options, to be consistent in multilingual sites. This commit also includes the changes for PLANET-6984, to use the new grey color in body and headings when the new setting is toggled. This required a little bit of refactoring to work properly.

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -279,3 +279,7 @@ input.describe[type=text][data-setting=caption] {
     margin-bottom: $sp-1;
   }
 }
+
+.customize-control[id*="new_identity_styles"] label {
+  display: inline;
+}
