--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -73,3 +73,6 @@ Text Domain: planet4-master-theme
 @import "vendors/usabilla";
 @import "vendors/gtm";
 @import "~lite-youtube-embed";
+
+// CSS variables
+@import "base/css-variables";
