PLANET-7005: Analytics sidebar in native UI
Ref: https://jira.greenpeace.org/browse/PLANET-7005

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -175,6 +175,12 @@
     text-transform: none;
   }
 
+  .components-input-control__label {
+    font-size: 13px !important;
+    font-weight: bold !important;
+    text-transform: none !important;
+  }
+
   // By default all but the first .component-base-control have margin-bottom, causing weird spacing.
   .components-base-control {
     margin-bottom: 0;
