Fix some links hover/visited/active color
These should always be the same color regardless of their state

--- a/assets/src/scss/pages/_sitemap.scss
+++ b/assets/src/scss/pages/_sitemap.scss
@@ -5,8 +5,10 @@
     color: $grey-80;
     font-family: var(--headings--font-family);
 
-    &:visited {
-      color: $link-color-visited;
+    &:visited,
+    &:active,
+    &:hover {
+      color: inherit;
     }
   }
 
