Set CSS variables defaults and remove them from theme file
This way we can easily override them, and the theme file is clearer

--- a/assets/src/scss/base/_variables.scss
+++ b/assets/src/scss/base/_variables.scss
@@ -1,9 +1,4 @@
 // Fonts
-:root {
-  --body--font-family: "Lora", serif;
-  --headings--font-family: "Roboto", sans-serif;
-}
-
 $roboto:     "Roboto", sans-serif;
 $lora:       "Lora", serif;
 
@@ -35,3 +30,17 @@ $sp-6x: space(6.5);
 $sp-7: space(7);
 $sp-7x: space(7.5);
 $sp-8: space(8);
+
+// Variables
+:root {
+  --body--font-family: $lora;
+  --headings--font-family: $roboto;
+  --headings--font-weight: bold;
+  --body--background-color: $white;
+  --body--color: $grey-80;
+  --link--color: $link-color;
+  --link--hover--color: $link-color;
+  --link--text-decoration: none;
+  --link--hover--text-decoration: underline;
+  --link--visited--color: $link-color-visited;
+}
