--- a/assets/src/scss/layout/_page-section.scss
+++ b/assets/src/scss/layout/_page-section.scss
@@ -1,7 +1,7 @@
 .page-section-header _-- {
   text-transform: none;
   color: inherit;
-  font-weight: var(--headings--font-weight, bold);
+  font-weight: var(--headings--font-weight);
   font-family: var(--headings--font-family);
   font-size: 2.5rem;
   margin-bottom: $sp-2;
