--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -144,7 +144,7 @@
   background: $white;
   border-radius: 0;
   border: none;
-  color: $grey-80 !important;
+  color: var(--body--color) !important;
 }
 
 // The color picker cannot be configured to show a clear button without giving the ability to enter any color with its
@@ -268,7 +268,7 @@ input.describe[type=text][data-setting=caption] {
   flex-direction: column-reverse;
 
   .block-editor-block-patterns-list__item-title {
-    color: $grey-80;
+    color: var(--body--color);
     font-weight: bold;
     margin-bottom: $sp-1;
   }
