--- a/assets/src/scss/layout/_cookies-settings.scss
+++ b/assets/src/scss/layout/_cookies-settings.scss
@@ -18,7 +18,7 @@
 }
 
 .close-cookies-settings {
-  background-color: $grey-80;
+  background-color: var(--body--color);
   cursor: pointer;
   height: 16px;
   width: 16px;
@@ -77,7 +77,7 @@
 }
 
 .always-enabled {
-  background: $grey-80;
+  background: var(--body--color);
   color: white;
   font-weight: 700;
   border-radius: 4px;
