--- a/assets/src/scss/layout/_forms.scss
+++ b/assets/src/scss/layout/_forms.scss
@@ -6,7 +6,7 @@
 
     &:not(:disabled) ~ .custom-control-description:hover:before,
     &:not(:disabled) ~ label:hover:before {
-      border-color: $grey-80;
+      border-color: var(--body--color);
     }
 
     & ~ .custom-control-description,
@@ -16,12 +16,11 @@
       font-family: var(--headings--font-family);
       font-size: $font-size-xxxs;
       line-height: 1rem;
-      color: $grey-80;
       display: inline-block;
       padding-inline-start: 36px;
 
       a {
-        color: $grey-80;
+        color: inherit;
         font-weight: bold;
       }
 
@@ -46,15 +45,15 @@
     &:checked ~ .custom-control-description,
     &:checked ~ label {
       &:before {
-        border-color: $grey-80;
+        border-color: var(--body--color);
       }
 
       &:after {
         content: "";
         position: absolute;
         transform: rotate(-45deg) scale(-1, 1);
-        border-bottom: 2px solid $grey-80;
-        border-right: 2px solid $grey-80;
+        border-bottom: 2px solid var(--body--color);
+        border-right: 2px solid var(--body--color);
         top: calc(((100% - 20px) / 2) + 5px);
         left: 4px;
         height: 8px;
@@ -84,7 +83,7 @@
 
     &:not(:disabled) ~ .custom-control-description:hover:before,
     &:not(:disabled) ~ label:hover:before {
-      border-color: $grey-80;
+      border-color: var(--body--color);
     }
 
     & ~ .custom-control-description,
@@ -94,11 +93,10 @@
       font-family: var(--headings--font-family);
       font-size: $font-size-sm;
       line-height: 1.25rem;
-      color: $grey-80;
       padding-inline-start: 36px;
 
       a {
-        color: $grey-80;
+        color: inherit;
         font-weight: bold;
       }
 
@@ -122,9 +120,9 @@
 
     &:checked ~ .custom-control-description:before,
     &:checked ~ label:before {
-      background: $grey-80;
+      background: var(--body--color);
       box-shadow: inset 0 0 0 2px $white;
-      border-color: $grey-80;
+      border-color: var(--body--color);
     }
   }
 }
@@ -142,7 +140,7 @@
   font-family: var(--headings--font-family);
   background-color: $white;
   border: 1px solid $grey-20;
-  color: $grey-80;
+  color: var(--body--color);
   padding: 0 16px;
   font-size: $font-size-sm;
 
@@ -162,7 +160,7 @@
 
   &:focus {
     box-shadow: 0 0 0 2px rgba(0, 109, 253, 0.4);
-    color: $grey-80;
+    color: var(--body--color);
     border-color: transparent;
     outline: 0;
   }
