--- a/assets/src/scss/layout/_gravity-forms.scss
+++ b/assets/src/scss/layout/_gravity-forms.scss
@@ -1,5 +1,5 @@
-@import "../base/variables";
 @import "../base/colors";
+@import "../base/variables";
 @import "../base/mixins";
 @import "../base/fonts";
 @import "../base/typography";
@@ -77,7 +77,7 @@
 
   &.gfield_error {
     .gfield_label {
-      color: $grey-80;
+      color: var(--body--color);
     }
 
     input:not([type="file"]):not(:disabled),
@@ -88,7 +88,7 @@
       background-image: none;
 
       ~ label {
-        color: $grey-80;
+        color: var(--body--color);
       }
 
       &:focus {
