--- a/assets/src/scss/pages/_sitemap.scss
+++ b/assets/src/scss/pages/_sitemap.scss
@@ -2,7 +2,7 @@
   margin-bottom: 100px;
 
   a {
-    color: $grey-80;
+    color: var(--body--color);
     font-family: var(--headings--font-family);
 
     &:visited,
