--- a/assets/src/scss/pages/post/_author-block.scss
+++ b/assets/src/scss/pages/post/_author-block.scss
@@ -78,7 +78,7 @@
   border: none;
   padding: 0;
   display: block;
-  color: $link-color;
+  color: var(--link--color);
 
   .show-less {
     display: none;
@@ -113,7 +113,7 @@
   }
 
   &:hover {
-    color: $link-color;
+    color: var(--link--hover--color);
 
     span {
       text-decoration: underline;
