--- a/assets/src/scss/pages/search/_filter-sidebar.scss
+++ b/assets/src/scss/pages/search/_filter-sidebar.scss
@@ -16,7 +16,7 @@
       padding: 11px $sp-4;
       text-transform: uppercase;
       text-decoration: none;
-      color: $grey-80;
+      color: var(--body--color);
       font-weight: bold;
       position: relative;
       font-size: $font-size-sm;
@@ -51,7 +51,7 @@
         &:after {
           content: "";
           position: absolute;
-          background-color: $grey-80;
+          background-color: var(--body--color);
           transition: transform 0.25s ease-out;
         }
 
@@ -130,7 +130,7 @@
       }
 
       &:hover {
-        color: $grey-80;
+        background: $orange-hover;
         cursor: pointer;
       }
 
@@ -144,11 +144,6 @@
         height: 48px;
         width: 150px;
         line-height: 48px;
-
-        &:hover {
-          background: $orange-hover;
-          color: $white;
-        }
       }
 
       &.disabled {
