--- a/assets/src/scss/layout/_forms.scss
+++ b/assets/src/scss/layout/_forms.scss
@@ -4,6 +4,12 @@
     opacity: 0;
     pointer-events: none;
 
+    &:focus:focus-visible ~ label:before,
+    &:focus:focus-visible ~ .custom-control-description:before {
+      outline: 2px solid #99c3ff;
+      outline-offset: 1px;
+    }
+
     &:not(:disabled) ~ .custom-control-description:hover:before,
     &:not(:disabled) ~ label:hover:before {
       border-color: var(--body--color);
@@ -80,6 +86,12 @@
     position: absolute;
     pointer-events: none;
     opacity: 0;
+
+    &:focus:focus-visible ~ label:before,
+    &:focus:focus-visible ~ .custom-control-description:before {
+      outline: 2px solid #99c3ff;
+      outline-offset: 1px;
+    }
 
     &:not(:disabled) ~ .custom-control-description:hover:before,
     &:not(:disabled) ~ label:hover:before {
