--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -190,6 +190,10 @@ $donate-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
       border: 1px solid transparent;
     }
 
+    &:visited {
+      color: $white;
+    }
+
     @include large-and-up {
       font-size: $font-size-md;
     }
