--- a/assets/src/styles/blocks/TakeActionBoxout/style.scss
+++ b/assets/src/styles/blocks/TakeActionBoxout/style.scss
@@ -53,7 +53,7 @@
 
   .boxout-heading {
     font-family: var(--headings--font-family);
-    color: $grey-80;
+    color: inherit;
     font-size: 16px;
     font-weight: 700;
     line-height: 1.25;
