PLANET-6989 Apply the new UI for the share buttons
- The share buttons were changed to match the new visual identity

--- a/assets/src/scss/base/_colors.scss
+++ b/assets/src/scss/base/_colors.scss
@@ -40,9 +40,11 @@ $active-blue:  #05324c;
 $peach:       #eaccbb;
 
 // Social buttons
+$share-buttons-bg-color: #f6f4ef;
+$share-buttons-bg-color__hover: #eceae4;
 $facebook: #4267b2;
 $twitter:  #55acee;
-$email:    #8a49de;
+$email:    #6f7376;
 $whatsapp: #25d366;
 
 // Used colors
