PLANET-6462: Upgrade to Node 16 LTS
- Modify engines and use npm <9
- Define NodeJS v16.19.0

--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -22,6 +22,7 @@ Text Domain: planet4-master-theme
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/utilities";
 
 // Layout & components
