--- a/assets/src/scss/pages/post/_comments-block.scss
+++ b/assets/src/scss/pages/post/_comments-block.scss
@@ -11,7 +11,7 @@
   font-family: var(--headings--font-family);
 
   &:not(:first-of-type) {
-    border-top: 1px solid transparentize($grey-20, 0.5);
+    border-top: 1px solid rgba(var(--grey-500), 0.5);
     padding-top: 24px;
   }
 }
