--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -12,6 +12,7 @@ Text Domain: planet4-master-theme
 */
 
 // Base
+@import "base/tokens";
 @import "base/colors";
 @import "base/variables";
 @import "base/palette";
