--- a/assets/src/scss/base/_colors.scss
+++ b/assets/src/scss/base/_colors.scss
@@ -1,19 +1,19 @@
-$white: #fff;
+$white: var(--white);
 $black: #000;
 
 // Grey
 $grey-80: #020202;
 $grey: #23292d;
-$grey-60: #45494c;
-$grey-40: #6f7376;
-$grey-20: #a3a5a7;
-$grey-10: #ececec;
-$grey-05: #f5f7f8;
+$grey-60: var(--grey-800);
+$grey-40: var(--grey-600);
+$grey-20: var(--grey-500);
+$grey-10: var(--grey-200);
+$grey-05: var(--grey-100);
 
 // Green
-$gp-green: #66cc00;
+$gp-green: var(--gp-green-500);
 $gp-green-80: #8bcc49;
-$gp-green-20: #e3f2d3;
+$gp-green-20: var(--gp-green-100);
 
 // Blue
 $blue: #2077bf;
@@ -58,9 +58,9 @@ $table-font-color: #020202;
 
 // Background colors
 // Grey variant (default)
-$table-header-grey: #45494c;
-$table-odd-row-grey: #ececec;
-$table-even-row-grey: #f5f7f8;
+$table-header-grey: var(--grey-800);
+$table-odd-row-grey: var(--grey-200);
+$table-even-row-grey: var(--grey-100);
 $table-footer-grey: #e0e4e7;
 
 // Green variant
