--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -4,6 +4,7 @@
 @import "~bootstrap/scss/tooltip";
 @import "~bootstrap/scss/buttons";
 
+@import "base/tokens";
 @import "base/colors";
 @import "base/variables";
 @import "base/palette";
