--- a/assets/src/scss/pages/search/_search-bar.scss
+++ b/assets/src/scss/pages/search/_search-bar.scss
@@ -1,6 +1,6 @@
 .search-bar {
   width: 100%;
-  background: transparentize($white, .7);
+  background: rgba(var(--white), .7);
   border: 1px solid $dark-blue;
   padding: 24px 15px;
   border-radius: 4px;
