--- a/assets/src/scss/pages/search/_suggested-terms.scss
+++ b/assets/src/scss/pages/search/_suggested-terms.scss
@@ -16,7 +16,7 @@
 }
 
 .suggested-list {
-  background-color: transparentize($white, .6);
+  background-color: rgba(var(--white), .6);
   padding: 32px 17px;
   margin: 0;
 
