PLANET-7013 Make sure Deep Dive images are always round (#1016)
Before this fix, in certain screen sizes the images became more oval. This commit also includes a small CSS refactor that reduces the bundle size.

--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -2,20 +2,20 @@
   figure,
   img {
     border-radius: 50%;
-    height: $size;
-    width: $size;
+    max-height: $size;
   }
 
   img {
     object-fit: cover;
+    aspect-ratio: 1;
   }
 }
 
 @mixin square-image-size($size) {
   figure,
   img {
-    height: #{$size};
-    width: #{$size};
+    height: $size;
+    width: $size;
   }
 
   img {
@@ -46,14 +46,12 @@
     display: none !important;
   }
 
-  &.square {
-    &-40 {
-      @include square-image-size(40px);
-    }
+  &.square-40 {
+    @include square-image-size(40px);
+  }
 
-    &-80 {
-      @include square-image-size(80px);
-    }
+  &.square-80 {
+    @include square-image-size(80px);
   }
 
   @include large-and-up {
