PLANET-6977 Hide WPML footer language switcher
We use CSS for this since it seems there's no available hook to do it

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -76,3 +76,8 @@ Text Domain: planet4-master-theme
 
 // CSS variables
 @import "base/css-variables";
+
+// Hide WPML footer language switcher.
+.wpml-ls-statics-footer {
+  display: none;
+}
