--- a/admin/css/wpml.css
+++ b/admin/css/wpml.css
@@ -1,3 +1,4 @@
-div[id="wpml-language-switcher-footer"] {
+div[id="wpml-language-switcher-footer"],
+div[id="ml-content-setup-sec-wp-login"] {
   display: none;
 }
