PLANET-6992 Update footer background colors for new identity
For now these are only visible when the new identity styles setting is checked

--- a/assets/src/scss/layout/_country-selector.scss
+++ b/assets/src/scss/layout/_country-selector.scss
@@ -90,7 +90,7 @@
 
 .countries-list {
   _-- {
-    background: var(--site-footer--background, $active-blue);
+    background: $active-blue;
   }
   font-weight: 500;
   max-height: 0;
