--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -1,3 +1,6 @@
 :root {
   --body--color: #1c1c1c;
+  --site-footer--background: #1f4912;
+  --countries-list--background: #1a3c10;
+  --site-footer--copyright--background: #1a3c10;
 }
