Add new datalayer value to track blocks
Ref: https://jira.greenpeace.org/browse/PLANET-7075

- Track planet4 blocks
- Track gravityforms forms

--- a/templates/blocks/google_tag_manager.twig
+++ b/templates/blocks/google_tag_manager.twig
@@ -50,7 +50,8 @@
       'visitorType' : '{{ p4_visitor_type }}',
       'userID' : '',
       'post_tags': '{{ post_tags }}',
-      'gPlatform': 'Planet 4'
+      'gPlatform': 'Planet 4',
+      'p4_blocks': '{{ p4_blocks }}',
     });
 
     {% if not post.password_required %}
