PLANET-6999 Apply the new colors to the Author block
These changes will only be applied if the new identity styles are enabled

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -30,4 +30,7 @@
   --button-donate--visited--color: var(--grey-900);
   --button-donate--hover--color: var(--grey-900);
   --button-donate--hover--background: var(--gp-green-500);
+  --author-block--background: var(--beige-100);
+  --author-block-description-button--color: var(--gp-green-800);
+  --author-block-description-button--hover--color: var(--gp-green-800);
 }
