Apply new colors to comments block
Ref: https://jira.greenpeace.org/browse/PLANET-6998

- Change background and reply button

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -15,6 +15,9 @@
   --button-primary--color: var(--grey-900);
   --button-primary--visited--color: var(--grey-900);
   --button-primary--hover--color: var(--grey-900);
+  --comment-reply-link--color: var(--grey-900);
+  --comment-reply-link--border-bottom: 2px solid var(--gp-green-500);
+  --link--hover--text-decoration: none;
   --post-tag-button--active--color: var(--grey-900);
   --post-tag-button--active--background-color: var(--gp-green-200);
   --post-tag-button--background-color: var(--gp-green-100);
